@@ -58,8 +58,8 @@ public:
 
     // Searching (Int and String)
     size_t find_first_int(size_t column_ndx, int64_t value) const;
-//??? size_t find_first_bool(size_t column_ndx, bool value) const;
-//??? size_t find_first_date(size_t column_ndx, time_t value) const;
+    size_t find_first_bool(size_t column_ndx, bool value) const;
+    size_t find_first_date(size_t column_ndx, time_t value) const;
     size_t find_first_string(size_t column_ndx, const char* value) const; 
     // FIXME: Need: size_t find_first_binary(size_t column_ndx, const char* value, size_t len) const;
 
@@ -81,6 +81,8 @@ public:
 protected:
     friend class Table;
     friend class Query;
+    template <class R, class V> static R find_all_integer(V*, size_t, int64_t);
+    template <class R, class V> static R find_all_string(V*, size_t, const char*);
 
     Table* m_table;
     Array m_refs;
@@ -114,6 +116,9 @@ protected:
 
     Array& get_ref_column() { return m_refs; }
     const Array& get_ref_column() const { return m_refs; }
+
+private:
+    size_t find_first_integer(size_t column_ndx, int64_t value) const;
 };
 
 
@@ -159,19 +164,19 @@ public:
     friend TableView move(TableView& tv) { return TableView(&tv); }
 
     // Subtables
-    TableRef get_subtable(size_t column_ndx, size_t row_ndx);
+    TableRef      get_subtable(size_t column_ndx, size_t row_ndx);
     ConstTableRef get_subtable(size_t column_ndx, size_t row_ndx) const;
-//??? void          clear_subtable(size_t column_ndx, size_t row_ndx);
+    void          clear_subtable(size_t column_ndx, size_t row_ndx);
 
     // Setting values
     void set_int(size_t column_ndx, size_t row_ndx, int64_t value);
     void set_bool(size_t column_ndx, size_t row_ndx, bool value);
     void set_date(size_t column_ndx, size_t row_ndx, time_t value);
-//???    template<class E> void set_enum(size_t column_ndx, size_t row_ndx, E value);
+    template<class E> void set_enum(size_t column_ndx, size_t row_ndx, E value);
     void set_string(size_t column_ndx, size_t row_ndx, const char* value);
     void set_binary(size_t column_ndx, size_t row_ndx, const char* value, size_t len);
     void set_mixed(size_t column_ndx, size_t row_ndx, Mixed value);
-//???    void add_int(size_t column_ndx, int64_t value);
+    void add_int(size_t column_ndx, int64_t value);
 
     // Deleting
     void clear();
@@ -179,21 +184,19 @@ public:
     void remove_last() { if (!is_empty()) remove(size()-1); }
 
     // Searching (Int and String)
-    TableView find_all_int(size_t column_ndx, int64_t value);
-    ConstTableView find_all_int(size_t column_ndx, int64_t value) const;
-//???: 
-//    TableView      find_all_bool(size_t column_ndx, bool value);
-//    ConstTableView find_all_bool(size_t column_ndx, bool value) const;
-//    TableView      find_all_date(size_t column_ndx, time_t value);
-//    ConstTableView find_all_date(size_t column_ndx, time_t value) const;
-
-    TableView find_all_string(size_t column_ndx, const char *value);
-    ConstTableView find_all_string(size_t column_ndx, const char *value) const;
+    TableView       find_all_int(size_t column_ndx, int64_t value);
+    ConstTableView  find_all_int(size_t column_ndx, int64_t value) const;
+    TableView       find_all_bool(size_t column_ndx, bool value);
+    ConstTableView  find_all_bool(size_t column_ndx, bool value) const;
+    TableView       find_all_date(size_t column_ndx, time_t value);
+    ConstTableView  find_all_date(size_t column_ndx, time_t value) const;
+    TableView       find_all_string(size_t column_ndx, const char *value);
+    ConstTableView  find_all_string(size_t column_ndx, const char *value) const;
     // FIXME: Need: TableView find_all_binary(size_t column_ndx, const char* value, size_t len);
     // FIXME: Need: ConstTableView find_all_binary(size_t column_ndx, const char* value, size_t len) const;
 
-//???    TableView      sorted(size_t column_ndx, bool ascending=true);
-//???    ConstTableView sorted(size_t column_ndx, bool ascending=true) const;
+    TableView      get_sorted_view(size_t column_ndx, bool ascending=true);
+    ConstTableView get_sorted_view(size_t column_ndx, bool ascending=true) const;
 
     Table& get_parent() { return *m_table; }
     const Table& get_parent() const { return *m_table; }
@@ -202,9 +205,13 @@ private:
     friend class ConstTableView;
     friend class Table;
     friend class Query;
+    friend class TableViewBase;
 
     TableView(Table& parent): TableViewBase(&parent) {}
     TableView(TableView* tv): TableViewBase(tv) {}
+
+    TableView find_all_integer(size_t column_ndx, int64_t value);
+    ConstTableView find_all_integer(size_t column_ndx, int64_t value) const;
 };
 
 
@@ -236,11 +243,11 @@ public:
 
     // Searching (Int and String)
     ConstTableView find_all_int(size_t column_ndx, int64_t value) const;
-//??? ConstTableView find_all_bool(size_t column_ndx, bool value) const;
-//??? ConstTableView find_all_date(size_t column_ndx, time_t value) const;
+    ConstTableView find_all_bool(size_t column_ndx, bool value) const;
+    ConstTableView find_all_date(size_t column_ndx, time_t value) const;
     ConstTableView find_all_string(size_t column_ndx, const char *value) const;
 
-//???    ConstTableView sorted(size_t column_ndx, bool ascending=true) const;
+    ConstTableView get_sorted_view(size_t column_ndx, bool ascending=true) const;
 
     const Table& get_parent() const { return *m_table; }
 
@@ -248,16 +255,30 @@ private:
     friend class TableView;
     friend class Table;
     friend class Query;
+    friend class TableViewBase;
 
     ConstTableView(const Table& parent): TableViewBase(const_cast<Table*>(&parent)) {}
     ConstTableView(ConstTableView* tv): TableViewBase(tv) {}
+
+    ConstTableView find_all_integer(size_t column_ndx, int64_t value) const;
 };
 
 
-
-
-
+// ================================================================================================
 // TableViewBase Implementation:
+
+#define TIGHTDB_ASSERT_COLUMN(column_ndx)                                   \
+    assert(m_table);                                                        \
+    assert(column_ndx < m_table->get_column_count());
+
+#define TIGHTDB_ASSERT_COLUMN_AND_TYPE(column_ndx, column_type)             \
+    TIGHTDB_ASSERT_COLUMN(column_ndx)                                       \
+    assert(m_table->get_column_type(column_ndx) == column_type);
+
+#define TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, column_type)     \
+    TIGHTDB_ASSERT_COLUMN_AND_TYPE(column_ndx, column_type)                 \
+    assert(row_ndx < m_refs.Size());
+
 
 inline TableViewBase::TableViewBase(TableViewBase* tv):
     m_table(tv->m_table),
@@ -272,6 +293,10 @@ inline void TableViewBase::move_assign(TableViewBase* tv)
     tv->m_table = 0;
     m_refs.move_assign(tv->m_refs);
 }
+
+
+// Column information
+
 
 inline size_t TableViewBase::get_column_count() const
 {
@@ -297,12 +322,13 @@ inline ColumnType TableViewBase::get_column_type(size_t column_ndx) const
     return m_table->get_column_type(column_ndx);
 }
 
+
+// Getters
+
+
 inline int64_t TableViewBase::get_int(size_t column_ndx, size_t row_ndx) const
 {
-    assert(m_table);
-    assert(column_ndx < m_table->get_column_count());
-    assert(m_table->get_column_type(column_ndx) == COLUMN_TYPE_INT);
-    assert(row_ndx < m_refs.Size());
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_INT);
 
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     return m_table->get_int(column_ndx, real_ndx);
@@ -310,10 +336,7 @@ inline int64_t TableViewBase::get_int(size_t column_ndx, size_t row_ndx) const
 
 inline bool TableViewBase::get_bool(size_t column_ndx, size_t row_ndx) const
 {
-    assert(m_table);
-    assert(column_ndx < m_table->get_column_count());
-    assert(m_table->get_column_type(column_ndx) == COLUMN_TYPE_BOOL);
-    assert(row_ndx < m_refs.Size());
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_BOOL);
 
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     return m_table->get_bool(column_ndx, real_ndx);
@@ -321,10 +344,7 @@ inline bool TableViewBase::get_bool(size_t column_ndx, size_t row_ndx) const
 
 inline time_t TableViewBase::get_date(size_t column_ndx, size_t row_ndx) const
 {
-    assert(m_table);
-    assert(column_ndx < m_table->get_column_count());
-    assert(m_table->get_column_type(column_ndx) == COLUMN_TYPE_DATE);
-    assert(row_ndx < m_refs.Size());
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_DATE);
 
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     return m_table->get_date(column_ndx, real_ndx);
@@ -332,10 +352,7 @@ inline time_t TableViewBase::get_date(size_t column_ndx, size_t row_ndx) const
 
 inline const char* TableViewBase::get_string(size_t column_ndx, size_t row_ndx) const
 {
-    assert(m_table);
-    assert(column_ndx < m_table->get_column_count());
-    assert(m_table->get_column_type(column_ndx) == COLUMN_TYPE_STRING);
-    assert(row_ndx < m_refs.Size());
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_STRING);
 
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     return m_table->get_string(column_ndx, real_ndx);
@@ -343,58 +360,206 @@ inline const char* TableViewBase::get_string(size_t column_ndx, size_t row_ndx) 
 
 inline BinaryData TableViewBase::get_binary(size_t column_ndx, size_t row_ndx) const
 {
-    assert(m_table);
-    assert(row_ndx < m_refs.Size());
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_BINARY);
+
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     return m_table->get_binary(column_ndx, real_ndx);
 }
 
 inline Mixed TableViewBase::get_mixed(size_t column_ndx, size_t row_ndx) const
 {
-    assert(m_table);
-    assert(row_ndx < m_refs.Size());
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_MIXED);
+    
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     return m_table->get_mixed(column_ndx, real_ndx);
 }
 
 inline ColumnType TableViewBase::get_mixed_type(size_t column_ndx, size_t row_ndx) const
 {
-    assert(m_table);
-    assert(row_ndx < m_refs.Size());
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_MIXED);
+
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     return m_table->get_mixed_type(column_ndx, real_ndx);
 }
 
 inline size_t TableViewBase::get_subtable_size(size_t column_ndx, size_t row_ndx) const
 {
-    assert(m_table);
-    assert(column_ndx < m_table->get_column_count());
-    assert(m_table->get_column_type(column_ndx) == COLUMN_TYPE_TABLE);
-    assert(row_ndx < m_refs.Size());
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_TABLE);
 
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     return m_table->get_subtable_size(column_ndx, real_ndx);
 }
 
-// TableView, ConstTableView:
+
+// Searching
+
+
+inline size_t TableViewBase::find_first_int(size_t column_ndx, int64_t value) const
+{
+    TIGHTDB_ASSERT_COLUMN_AND_TYPE(column_ndx, COLUMN_TYPE_INT);
+    return find_first_integer(column_ndx, value);
+}
+
+inline size_t TableViewBase::find_first_bool(size_t column_ndx, bool value) const
+{
+    TIGHTDB_ASSERT_COLUMN_AND_TYPE(column_ndx, COLUMN_TYPE_BOOL);
+    return find_first_integer(column_ndx, value ? 1 : 0);
+}
+
+inline size_t TableViewBase::find_first_date(size_t column_ndx, time_t value) const
+{
+    TIGHTDB_ASSERT_COLUMN_AND_TYPE(column_ndx, COLUMN_TYPE_DATE);
+    return find_first_integer(column_ndx, (int64_t)value);
+}
+
+
+template <class R, class V>
+R TableViewBase::find_all_integer(V* view, size_t column_ndx, int64_t value)
+{
+    R tv(*view->m_table);
+    for (size_t i = 0; i < view->m_refs.Size(); i++)
+        if (view->get_int(column_ndx, i) == value)
+            tv.get_ref_column().add(i);
+    return move(tv);
+}
+
+template <class R, class V>
+R TableViewBase::find_all_string(V* view, size_t column_ndx, const char* value)
+{
+    assert(view->m_table);
+    assert(column_ndx < view->m_table->get_column_count());
+    assert(view->m_table->get_column_type(column_ndx) == COLUMN_TYPE_STRING);
+
+    R tv(*view->m_table);
+    for (size_t i = 0; i < view->m_refs.Size(); i++)
+        if (strcmp(view->get_string(column_ndx, i), value) == 0)
+            tv.get_ref_column().add(i);
+    return move(tv);
+}
+
+
+// TableView, ConstTableView implementation:
+
+
+inline TableView TableView::find_all_string(size_t column_ndx, const char* value)
+{
+    return TableViewBase::find_all_string<TableView>(this, column_ndx, value);
+}
+
+inline ConstTableView TableView::find_all_string(size_t column_ndx, const char* value) const
+{
+    return TableViewBase::find_all_string<ConstTableView>(this, column_ndx, value);
+}
+
+inline ConstTableView ConstTableView::find_all_string(size_t column_ndx, const char* value) const
+{
+    return TableViewBase::find_all_string<ConstTableView>(this, column_ndx, value);
+}
+
+
+inline TableView TableView::find_all_integer(size_t column_ndx, int64_t value)
+{
+    return TableViewBase::find_all_integer<TableView>(this, column_ndx, value);
+}
+
+inline ConstTableView TableView::find_all_integer(size_t column_ndx, int64_t value) const
+{
+    return TableViewBase::find_all_integer<ConstTableView>(this, column_ndx, value);
+}
+
+inline ConstTableView ConstTableView::find_all_integer(size_t column_ndx, int64_t value) const
+{
+    return TableViewBase::find_all_integer<ConstTableView>(this, column_ndx, value);
+}
+
+
+inline TableView TableView::find_all_int(size_t column_ndx, int64_t value)
+{
+    TIGHTDB_ASSERT_COLUMN_AND_TYPE(column_ndx, COLUMN_TYPE_INT);
+    return find_all_integer(column_ndx, value);
+}
+
+inline TableView TableView::find_all_bool(size_t column_ndx, bool value)
+{
+    TIGHTDB_ASSERT_COLUMN_AND_TYPE(column_ndx, COLUMN_TYPE_BOOL);
+    return find_all_integer(column_ndx, value ? 1 : 0);
+}
+
+inline TableView TableView::find_all_date(size_t column_ndx, time_t value)
+{
+    TIGHTDB_ASSERT_COLUMN_AND_TYPE(column_ndx, COLUMN_TYPE_DATE);
+    return find_all_integer(column_ndx, (int64_t)value);
+}
+
+
+inline ConstTableView TableView::find_all_int(size_t column_ndx, int64_t value) const
+{
+    TIGHTDB_ASSERT_COLUMN_AND_TYPE(column_ndx, COLUMN_TYPE_INT);
+    return find_all_integer(column_ndx, value);
+}
+
+inline ConstTableView TableView::find_all_bool(size_t column_ndx, bool value) const
+{
+    TIGHTDB_ASSERT_COLUMN_AND_TYPE(column_ndx, COLUMN_TYPE_BOOL);
+    return find_all_integer(column_ndx, value ? 1 : 0);
+}
+
+inline ConstTableView TableView::find_all_date(size_t column_ndx, time_t value) const
+{
+    TIGHTDB_ASSERT_COLUMN_AND_TYPE(column_ndx, COLUMN_TYPE_DATE);
+    return find_all_integer(column_ndx, (int64_t)value);
+}
+
+
+inline ConstTableView ConstTableView::find_all_int(size_t column_ndx, int64_t value) const
+{
+    TIGHTDB_ASSERT_COLUMN_AND_TYPE(column_ndx, COLUMN_TYPE_INT);
+    return find_all_integer(column_ndx, value);
+}
+
+inline ConstTableView ConstTableView::find_all_bool(size_t column_ndx, bool value) const
+{
+    TIGHTDB_ASSERT_COLUMN_AND_TYPE(column_ndx, COLUMN_TYPE_BOOL);
+    return find_all_integer(column_ndx, value ? 1 : 0);
+}
+
+inline ConstTableView ConstTableView::find_all_date(size_t column_ndx, time_t value) const
+{
+    TIGHTDB_ASSERT_COLUMN_AND_TYPE(column_ndx, COLUMN_TYPE_DATE);
+    return find_all_integer(column_ndx, (int64_t)value);
+}
+
+
+// Sorting
+
+
+inline TableView TableView::get_sorted_view(size_t column_ndx, bool ascending)
+{
+    TIGHTDB_ASSERT_COLUMN(column_ndx);
+    return m_table->get_sorted_view(column_ndx, ascending);
+}
+
+inline ConstTableView ConstTableView::get_sorted_view(size_t column_ndx, bool ascending) const
+{
+    TIGHTDB_ASSERT_COLUMN(column_ndx);
+    return m_table->get_sorted_view(column_ndx, ascending);
+}
+
+
+// Subtables
+
 
 inline TableRef TableView::get_subtable(size_t column_ndx, size_t row_ndx)
 {
-    assert(m_table);
-    assert(column_ndx < m_table->get_column_count());
-    assert(m_table->get_column_type(column_ndx) == COLUMN_TYPE_TABLE);
-    assert(row_ndx < m_refs.Size());
-
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_TABLE);
+    
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     return m_table->get_subtable(column_ndx, real_ndx);
 }
 
 inline ConstTableRef TableView::get_subtable(size_t column_ndx, size_t row_ndx) const
 {
-    assert(m_table);
-    assert(column_ndx < m_table->get_column_count());
-    assert(m_table->get_column_type(column_ndx) == COLUMN_TYPE_TABLE);
-    assert(row_ndx < m_refs.Size());
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_TABLE);
 
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     return m_table->get_subtable(column_ndx, real_ndx);
@@ -402,21 +567,27 @@ inline ConstTableRef TableView::get_subtable(size_t column_ndx, size_t row_ndx) 
 
 inline ConstTableRef ConstTableView::get_subtable(size_t column_ndx, size_t row_ndx) const
 {
-    assert(m_table);
-    assert(column_ndx < m_table->get_column_count());
-    assert(m_table->get_column_type(column_ndx) == COLUMN_TYPE_TABLE);
-    assert(row_ndx < m_refs.Size());
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_TABLE);
 
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     return m_table->get_subtable(column_ndx, real_ndx);
 }
 
+inline void TableView::clear_subtable(size_t column_ndx, size_t row_ndx)
+{
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_TABLE);
+
+    const size_t real_ndx = size_t(m_refs.Get(row_ndx));
+    return m_table->clear_subtable(column_ndx, real_ndx);
+}
+
+
+// Setters
+
+
 inline void TableView::set_int(size_t column_ndx, size_t row_ndx, int64_t value)
 {
-    assert(m_table);
-    assert(column_ndx < m_table->get_column_count());
-    assert(m_table->get_column_type(column_ndx) == COLUMN_TYPE_INT);
-    assert(row_ndx < m_refs.Size());
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_INT);
 
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     m_table->set_int(column_ndx, real_ndx, value);
@@ -424,10 +595,7 @@ inline void TableView::set_int(size_t column_ndx, size_t row_ndx, int64_t value)
 
 inline void TableView::set_bool(size_t column_ndx, size_t row_ndx, bool value)
 {
-    assert(m_table);
-    assert(column_ndx < m_table->get_column_count());
-    assert(m_table->get_column_type(column_ndx) == COLUMN_TYPE_BOOL);
-    assert(row_ndx < m_refs.Size());
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_BOOL);
 
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     m_table->set_bool(column_ndx, real_ndx, value);
@@ -435,42 +603,46 @@ inline void TableView::set_bool(size_t column_ndx, size_t row_ndx, bool value)
 
 inline void TableView::set_date(size_t column_ndx, size_t row_ndx, time_t value)
 {
-    assert(m_table);
-    assert(column_ndx < m_table->get_column_count());
-    assert(m_table->get_column_type(column_ndx) == COLUMN_TYPE_DATE);
-    assert(row_ndx < m_refs.Size());
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_DATE);
 
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     m_table->set_date(column_ndx, real_ndx, value);
 }
 
+template<class E> inline void TableView::set_enum(size_t column_ndx, size_t row_ndx, E value)
+{
+    const size_t real_ndx = size_t(m_refs.Get(row_ndx));
+    m_table->set_int(column_ndx, row_ndx, value);
+}
+
 inline void TableView::set_string(size_t column_ndx, size_t row_ndx, const char* value)
 {
-    assert(m_table);
-    assert(column_ndx < m_table->get_column_count());
-    assert(m_table->get_column_type(column_ndx) == COLUMN_TYPE_STRING);
-    assert(row_ndx < m_refs.Size());
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_STRING);
 
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     m_table->set_string(column_ndx, real_ndx, value);
 }
 
-inline void TableView::set_binary(std::size_t column_ndx, size_t row_ndx, const char* value, size_t len)
+inline void TableView::set_binary(size_t column_ndx, size_t row_ndx, const char* value, size_t len)
 {
-    assert(m_table);
-    assert(row_ndx < m_refs.Size());
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_BINARY);
+
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     m_table->set_binary(column_ndx, real_ndx, value, len);
 }
 
-inline void TableView::set_mixed(std::size_t column_ndx, size_t row_ndx, Mixed value)
+inline void TableView::set_mixed(size_t column_ndx, size_t row_ndx, Mixed value)
 {
-    assert(m_table);
-    assert(row_ndx < m_refs.Size());
+    TIGHTDB_ASSERT_INDEX_AND_TYPE(column_ndx, row_ndx, COLUMN_TYPE_MIXED);
+
     const size_t real_ndx = size_t(m_refs.Get(row_ndx));
     m_table->set_mixed(column_ndx, real_ndx, value);
 }
 
+inline void TableView::add_int(size_t column_ndx, int64_t value)
+{
+    m_table->add_int(column_ndx, value); 
+}
 
 } // namespace tightdb
 
